spacing fixed
dark mode and light mode

--- a/08072020/lightMode/scss/light-mode.scss
+++ b/08072020/lightMode/scss/light-mode.scss
@@ -415,6 +415,11 @@ ul.sapUshellInner {
             fill: #434242;
         }
     }
+    .v-overflow{
+        text {
+            fill: #3D3B3B;
+        }
+    }
     .v-m-root {
         .v-gridline-group {
             .v-gridline {
@@ -981,7 +986,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 575px;
+                                height: 576px;
                             }
                         }
                     }
@@ -1056,7 +1061,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 575px;
+                                height: 585px;
                             }
                         }
                     }
@@ -1228,7 +1233,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 575px;
+                                height: 576px;
                             }
                         }
                     }
@@ -1396,7 +1401,7 @@ ul.sapUshellInner {
                                 }
                             }
                             @media (min-width: 768px){
-                                height: 575px;
+                                height: 585px;
                             }
                         }
                     }
